# databricks-multi-genie

./: .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml
.legacy/: multi-genie-claude-supervisor_teva-Guy-customized.ipynb
agent/: agent.py  genie_capture.py  start_server.py  utils.py
deploy/: deploy.sh  sync_databricks_yml_from_env.py
deploy/grant/: authorize_endpoint_for_app.py  authorize_genie_for_app.py  authorize_warehouse_for_app.py  grant_app_functions.py  grant_app_tables.py  retrieve_app_sp.py  run_all_grants.sh
e2e-chatbot-app-next/client/src/components/: AppHeader.tsx  app-sidebar.tsx  chat-loading-indicator.tsx  chat-panel-header.tsx  chat.tsx  message.tsx  suggested-actions.tsx  task-events-listener.tsx
e2e-chatbot-app-next/client/src/contexts/: ChatSendMessageContext.tsx
e2e-chatbot-app-next/client/src/layouts/: ChatLayout.tsx
e2e-chatbot-app-next/client/src/lib/: response-blocks.ts
e2e-chatbot-app-next/client/src/pages/: HomePage.tsx
e2e-chatbot-app-next/server/src/: index.ts
e2e-chatbot-app-next/server/src/routes/: tables.ts  workspaces.ts
prompt/: main.prompt
scripts/: create_mlflow_experiment.py  start_local.sh
