[project]
name = "teva-x"
version = "0.1.0"
description = "Teva Genie Supervisor — multi-workspace AI routing agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "databricks-langchain>=0.14.0",
    "databricks-sdk>=0.40.0",
    "mlflow>=3.4.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
    "databricks-mcp>=0.1.0",
    "nest-asyncio>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=7.0.0",
]

[project.scripts]
start-app = "scripts.start_app:main"
start-server = "agent.start_server:main"
quickstart = "scripts.quickstart:main"
